# graph_ml_playground

./: .gitignore  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/graph_ml_playground/: __init__.py  gcn.py  mutag.py
tests/: __init__.py  test_gcn.py
